* 0.106

- Upgrade to Airbase 36
- Upgrade to Jetty 9.2.11.M0

* 0.105

- Upgrade to Airbase 35
- Upgrade to Jetty 9.2.10.v20150310

* 0.104

- Upgrade to Airbase 34

* 0.103

- Upgrade to Airbase 32
- Upgrade to Slice 0.10

* 0.102

- Fix bug when deserializing dense HLL v1 with no overflow bucket
- Verify HLLs have the same bucket count before merging them
- Add thread factory threads to a ThreadGroup
- Add more JettyHttpClient stats and debug operations

* 0.101

- New layout for dense HLL
- Fix bug in cardinality estimates produced by sparse HLL
- Expose request queue depth stats in HttpClient

* 0.100

- New algorithm and representation for sparse HLL

* 0.99

- Java 8 is now required
- Support JSON serialization of Java 8 types

* 0.98

- Expose JettyHttpClient dump methods to JMX
- Make HyperLogLog.addHash public

* 0.97

- Add AsyncSemaphore concurrent utility
- Add /v1/jmx/mbean/{objectName}/{attributeName} to get a single MBean attribute value

* 0.96

- Add AbstractConfigurationAwareModule for accessing config at binding time
- Upgrade to Airbase 28
- Upgrade to Guava 18.0
- Remove server archetype builders
- Remove deprecated AsyncHttpClient and bindAsyncHttpClient()
- Un-deprecate discovery.uri config property
- Show stack traces in HTTP error responses

* 0.95

- Add AsyncResponseHandler utility for building async HTTP responses
- Add Add Announcer.forceAnnounce() and ServiceSelector.refresh()
- Add more utility methods to Closeables
- Name and group Jetty HTTP client threads
- Always use daemon threads in HTTP client
- Add getResponseBytes() and getResponseBody() to FullJsonResponseHandler
- Change Duration.nanosSince() convert to most succinct unit

* 0.94

- Add min/max validators for DataSize
- Allow JettyHttpClient to configure maxRequestsQueuedPerDestination
- Add Jersey AsyncContextDelegateProvider implementation
- Upgrade to Airbase 26
- Always remove GZIP handler from JettyHttpClient
- Switch BoundedExecutor queue to ConcurrentLinkedQueue
