@@ -2,6 +2,7 @@
 
 - Upgrade to Airbase 36
 - Upgrade to Jetty 9.2.11.M0
+- Enable Jetty Client connection sweeper
 
 * 0.105
 
